@@ -1,3 +1,11 @@
+1998-09-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* simtools.h (initSwarmAppArguments): Call Argument's
+	createArgc:Argv:version:bugAddress:, and body of former
+	initSwarmArguments.
+	(initSwarmApp): New function.
+	(initSwarm, initSwarmArguments): Call initSwarmAppArguments.
+	
 1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Archiver.m ([Archiver -processQuotedExpr:]): Use ARCHIVERLITERALP.
